Commiting to gh-pages

--- a/about.html
+++ b/about.html
@@ -25,11 +25,11 @@
     </header>
     <section class="main-content">
         <h1>Sobre mim</h1>
-        <p>Apresentacao de suas habilidades e certificados que possui e mais coisas sobre vc</p>
+        <p>Apresentacao de suas novas habilidades e certificados que possui e mais coisas sobre vc</p>
     </section>
 
     <footer>
-        <p>RMC WebSites - Copyright 2019</p>
+        <p>RMC WebSites - Copyright 2019 </p>
     </footer>
 </body>
 
