--- a/courses.html
+++ b/courses.html
@@ -25,7 +25,7 @@
     </header>
     <section class="main-content">
         <h1>Cursos Online</h1>
-        <p>Nesta secao vc apresentara todos os cursos e links para os cursos</p>
+        <p>Nesta secao vc apresentara algusn de todos os cursos e links para os cursos </p>
     </section>
 
     <footer>
