--- a/services.html
+++ b/services.html
@@ -25,7 +25,7 @@
     </header>
     <section class="main-content">
         <h1>Descricao dos Servicos</h1>
-        <p>Descricao dos servicos e precos</p>
+        <p>Descricao dos servicos e precos e outras coisas relacionadas</p>
     </section>
 
     <footer>
