--- a/galery.html
+++ b/galery.html
@@ -11,16 +11,17 @@
 <body>
     <header>
         <h1>Logo</h1>
-        <nav>
-            <ul>
-                <li>Home</li>
-                <li>Sobre mim</li>
-                <li>Servicos</li>
-                <li>Galerias</li>
-                <li>Cursos</li>
-                <li>Contato</li>
-            </ul>
-        </nav>
+        <div class="main-nav">
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="about.html">Sobre mim</a>
+                <a href="services.html">Servicos</a>
+                <a class="active" href="galery.html">Galerias</a>
+                <a href="courses.html">Cursos</a>
+                <a href="contact.html">Contato</a>
+
+            </nav>
+        </div>
 
     </header>
     <section class="main-content">
