--- a/index.html
+++ b/index.html
@@ -10,17 +10,19 @@
 
 <body>
     <header>
+
         <h1>Logo vem aqui</h1>
-        <nav>
-            <ul>
-                <li>Home</li>
-                <li>Sobre mim</li>
-                <li>Servicos</li>
-                <li>Galerias</li>
-                <li>Cursos</li>
-                <li>Contato</li>
-            </ul>
-        </nav>
+        <div class="main-nav">
+            <nav>
+                <a class="active" href="index.html">Home</a>
+                <a href="about.html">Sobre mim</a>
+                <a href="services.html">Servicos</a>
+                <a href="galery.html">Galerias</a>
+                <a href="courses.html">Cursos</a>
+                <a href="contact.html">Contato</a>
+
+            </nav>
+        </div>
 
     </header>
     <section class="show-case">
