HTML Structure - Second Commit

--- a/index.html
+++ b/index.html
@@ -5,37 +5,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="Description" content="Marquele Shimizu WebSite">
+    <meta name="Keywords" content="beleza, coloracao pessoal, cabelos corte">
+    <meta name="author" content="Ronaldo Maia Correa">
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Darker+Grotesque&display=swap" rel="stylesheet">
     <title>Marquele WebSite | Bem-vindo</title>
 </head>
 
 <body>
     <header>
+        <div class="container">
+            <div id="logo">
+                <p>Logo vem aqui</p>
+            </div>
+            <div class="main-nav">
+                <nav>
+                    <a class="active" href="index.html">Home</a>
+                    <a href="about.html">Sobre mim</a>
+                    <a href="services.html">Servicos</a>
+                    <a href="galery.html">Galerias</a>
+                    <a href="courses.html">Cursos</a>
+                    <a href="contact.html">Contato</a>
 
-        <h1>Logo vem aqui</h1>
-        <div class="main-nav">
-            <nav>
-                <a class="active" href="index.html">Home</a>
-                <a href="about.html">Sobre mim</a>
-                <a href="services.html">Servicos</a>
-                <a href="galery.html">Galerias</a>
-                <a href="courses.html">Cursos</a>
-                <a href="contact.html">Contato</a>
-
-            </nav>
+                </nav>
+            </div>
         </div>
 
     </header>
     <section class="show-case">
-        <h1>ShowCase vem aqui</h1>
+        <div class="container">
+            <h1>ShowCase vem aqui</h1>
+        </div>
     </section>
     <section class="main-content">
-        <h1>Novidades - Alguns destaques que vc considera importante mostrar aqui</h1>
+        <div class="container">
+            <h1>Novidades - Alguns destaques que vc considera importante mostrar aqui</h1>
+        </div>
     </section>
     <section class="testimonials">
-        <h1>Testemunhos - reunir cerca de 6 testemunhos de clientes aqui</h1>
+        <div class="container">
+            <h1>Testemunhos - reunir cerca de 6 testemunhos de clientes aqui</h1>
+        </div>
     </section>
     <footer>
-        <p>RMC WebSites - Copyright 2019</p>
+        <p>RMC Web Design, Copyright &copy; 2019</p>
     </footer>
 
 
