--- a/services.html
+++ b/services.html
@@ -10,19 +10,21 @@
 
 <body>
     <header>
-        <h1>Logo</h1>
-        <div class="main-nav">
-            <nav>
-                <a href="index.html">Home</a>
-                <a href="about.html">Sobre mim</a>
-                <a class="active" href="services.html">Servicos</a>
-                <a href="galery.html">Galerias</a>
-                <a href="courses.html">Cursos</a>
-                <a href="contact.html">Contato</a>
-
-            </nav>
+        <div class="container">
+            <div id="logo">
+                <h1>Logo</h1>
+            </div>
+            <div class="main-nav">
+                <nav>
+                    <a href="index.html">Home</a>
+                    <a href="about.html">Sobre mim</a>
+                    <a class="active" href="services.html">Servicos</a>
+                    <a href="galery.html">Galerias</a>
+                    <a href="courses.html">Cursos</a>
+                    <a href="contact.html">Contato</a>
+                </nav>
+            </div>
         </div>
-
     </header>
     <section class="main-content">
         <h1>Descricao dos Servicos</h1>
