--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <div class="container">
             <div id="logo">
-                <p>Logo vem aqui</p>
+                <img src="./images/logo.png" width="265" />
             </div>
             <div class="main-nav">
                 <nav>
@@ -31,7 +31,6 @@
                 </nav>
             </div>
         </div>
-
     </header>
     <section class="show-case">
         <div class="container">
