--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="Keywords" content="beleza, coloracao pessoal, cabelos corte">
     <meta name="author" content="Ronaldo Maia Correa">
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Hepta+Slab&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Darker+Grotesque&display=swap" rel="stylesheet">
     <title>Marquele WebSite | Bem-vindo</title>
 </head>
@@ -17,12 +18,12 @@
     <header>
         <div class="container">
             <div id="logo">
-                <img src="./images/logo.png" width="265" />
+                <img src="./images/Untitled-1.png" width="250" />
             </div>
             <div class="main-nav">
                 <nav>
                     <a class="active" href="index.html">Home</a>
-                    <a href="about.html">Sobre mim</a>
+                    <a href="#about">Sobre mim</a>
                     <a href="services.html">Servicos</a>
                     <a href="galery.html">Galerias</a>
                     <a href="courses.html">Cursos</a>
@@ -34,11 +35,23 @@
     </header>
     <section class="show-case">
         <div class="container">
-            <h1>ShowCase vem aqui</h1>
+            <div class="div-show-case">
+                <p id="welcome">SUAS CORES<br />
+                    SUA MARCA PESSOAL</p>
+
+            </div>
         </div>
     </section>
-    <section class="main-content">
+    <section class="about">
         <div class="container">
+            <div class="div-about">
+                <div class="image">
+
+                </div>
+                <div class="text">
+                    <p>Falar sobre ela</p>
+                </div>
+            </div>
             <h1>Novidades - Alguns destaques que vc considera importante mostrar aqui</h1>
         </div>
     </section>
