Design of Index.html - 2019-09-05

--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
     <section class="show-case">
         <div class="container">
             <div class="div-show-case">
-                <p id="welcome">SUAS CORES<br />
-                    SUA MARCA PESSOAL</p>
+				<p class="fade-in" id="welcome1">Suas cores</p>
+				<p class="fade-in-1" id="welcome2">Sua marca pessoal</p>
+				<p class="fade-in-2" id="welcome3">Seu jeito de ser...</p>                    
             </div>
         </div>
     </section>
