Design index.html - 2019-09-05

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Cinzel:700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Hepta+Slab&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Darker+Grotesque&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Satisfy&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <title>Marquele WebSite | Bem-vindo</title>
 </head>
@@ -38,15 +39,17 @@
     <section class="show-case">
         <div class="container">
             <div class="div-show-case">
-				<p class="fade-in" id="welcome1">Suas cores</p>
-				<p class="fade-in-1" id="welcome2">Sua marca pessoal</p>
-				<p class="fade-in-2" id="welcome3">Seu jeito de ser...</p>                    
+                <ul id="anim-list">
+                    <li id="welcome1">Suas cores</li>
+                    <li id="welcome2">Sua marca pessoal</li>
+                    <li id="welcome3">Seu jeito unico de ser...</li>
+                </ul>
             </div>
         </div>
     </section>
     <section class="about">
         <div class="div-ab">
-            <h1 id="about">SOBRE MIM</h1>
+            <h1 id="about">Sobre mim</h1>
             <div class="div-ab-img">
                 <img src="./images/aboutPicture.jpg" alt="About Marquele" id="aboutimage">
             </div>
