Front-end design update - 2019-09-10

--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
 <body>
     <header>
         <div class="container">
-            <div id="logo">
-                <img src="./images/Untitled-1.png" width="250" />
+            <div id="div-logo">
+                <img src="./images/logo-2.png" id="logo" />
             </div>
             <div class="main-nav">
                 <nav>
-                    <a class="active" href="index.html">Home</a>
-                    <a href="#about">Sobre mim</a>
-                    <a href="services.html">Servicos</a>
-                    <a href="galery.html">Galerias</a>
-                    <a href="courses.html">Cursos</a>
-                    <a href="contact.html">Contato</a>
+                    <a class="active" href="index.html">HOME</a>
+                    <a href="#about">SOBRE MIM</a>
+                    <a href="services.html">SERVICOS</a>
+                    <a href="galery.html">GALERIAS</a>
+                    <a href="courses.html">CURSOS</a>
+                    <a href="contact.html">CONTATO</a>
 
                 </nav>
             </div>
@@ -39,21 +39,18 @@
     <section class="show-case">
         <div class="container">
             <div class="div-show-case">
-                <ul id="anim-list">
-                    <li id="welcome1">Suas cores</li>
-                    <li id="welcome2">Sua marca pessoal</li>
-                    <li id="welcome3">Seu jeito unico de ser...</li>
-                </ul>
+
             </div>
         </div>
     </section>
+
     <section class="about">
         <div class="div-ab">
-            <h1 id="about">Sobre mim</h1>
             <div class="div-ab-img">
                 <img src="./images/aboutPicture.jpg" alt="About Marquele" id="aboutimage">
             </div>
             <div class="div-ab-txt">
+                <p><span id="name">MARQUELE SHIMIZU</span></p>
                 <p>Coach de beleza, colorimetrista, analista de coloração pessoal, visagista, maquiadora e designer
                     de sobrancelhas.</p>
                 <p>Sou brasiliense, formada em quimica pela UEG, mãe e esposa. Apaixonada pela busca de conhecimento
